--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -8,6 +8,10 @@
 }
 
 #carouselExampleDark {
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
+}
+
+#carouselExampleDark p {
+    color: white;
 }
