--- a/scss/_noticias.scss
+++ b/scss/_noticias.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 20px 30px;
 }
 
 .cards-todas img {
@@ -13,7 +13,7 @@
         border-radius: 10px;
         display: block;
         margin: 0 auto;
-}
+    }
 
 button {
     border: none;
